[gd_scene load_steps=6 format=2]

[ext_resource path="res://Generic.tres" type="TileSet" id=1]
[ext_resource path="res://goal.tscn" type="PackedScene" id=2]
[ext_resource path="res://moneda.tscn" type="PackedScene" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://fons.tres" type="TileSet" id=5]

[node name="World1" type="Node2D"]
script = ExtResource( 4 )

[node name="Mapa" type="Node2D" parent="."]
position = Vector2( -51, -10 )

[node name="ColorRect" type="ColorRect" parent="Mapa"]
margin_left = -31.0
margin_top = -10.0
margin_right = 1143.0
margin_bottom = 684.0
color = Color( 0.333333, 0.705882, 1, 1 )

[node name="TileMap fons" type="TileMap" parent="Mapa"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 13
cell_custom_transform = Transform2D( 64, -0.017, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( 131074, 24, 0, 262155, 24, 0, 589841, 20, 0, 655382, 1610612741, 1, 655383, 5, 3, 720914, 5, 65536, 720915, 5, 65537, 720916, 5, 1, 720917, 1610612741, 1, 720918, 1610612741, 1, 720919, 1610612741, 65537, 720920, 1610612741, 65536, 786451, 5, 65536, 786452, 5, 65537, 786453, 1610612741, 1, 786454, 1610612741, 1, 786455, 1610612741, 1, 786456, 5, 1, 786457, 5, 1, 851988, 5, 0, 851989, 5, 1, 851990, 5, 1, 851991, 1073741829, 1, 851992, 1610612741, 1, 851993, 1610612741, 1, 851994, 1610612741, 1, 851995, 1073741829, 3, 917505, 17, 0, 917511, 5, 3, 917523, 1073741829, 65536, 917524, 1073741829, 65537, 917525, 5, 1, 917526, 5, 1, 917527, 5, 1, 917528, 5, 1, 917529, 1610612741, 1, 917530, 1610612741, 1, 917531, 1073741829, 3, 983046, 1073741829, 0, 983047, 5, 3, 983058, 5, 0, 983059, 5, 1, 983060, 5, 1, 983061, 5, 1, 983062, 5, 1, 983063, 5, 1, 983064, 5, 1, 983065, 1610612741, 1, 983066, 1610612741, 1, 983067, 1073741829, 3, 1048579, 19, 0, 1048581, 1073741829, 65536, 1048582, 1073741829, 65537, 1048583, 1073741829, 3, 1048594, 5, 0, 1048595, 5, 1, 1048596, 5, 1, 1048597, 5, 1, 1048598, 5, 1, 1048599, 5, 1, 1048600, 5, 1, 1048601, 1610612741, 1, 1048602, 1610612741, 1, 1048603, 1073741829, 3, 1048608, 1073741829, 65536, 1048609, 1610612741, 65536, 1114119, 1073741829, 1, 1114120, 1073741829, 1, 1114130, 5, 0, 1114131, 5, 1, 1114132, 5, 1, 1114133, 5, 1, 1114134, 5, 1, 1114135, 5, 1, 1114136, 5, 1, 1114137, 1610612741, 1, 1114138, 1610612741, 1, 1114139, 1073741829, 3, 1114143, 1073741829, 65536, 1114144, 1073741829, 65537, 1114145, 1610612741, 65537, 1114146, 1610612741, 65536, 1114147, 32, 0, 1179656, 15, 65537, 1179657, 15, 1, 1179658, 15, 1, 1179659, 15, 1, 1179660, 15, 1, 1179661, 15, 1, 1179662, 15, 1, 1179663, 15, 1, 1179664, 15, 1, 1179665, 15, 1, 1179666, 5, 0, 1179667, 5, 1, 1179670, 5, 1, 1179671, 5, 1, 1179672, 5, 1, 1179673, 1610612741, 1, 1179674, 1610612741, 1, 1179675, 1073741829, 3, 1179676, 536870927, 0, 1179677, 536870927, 0, 1179678, 536870927, 0, 1179679, 5, 0, 1179680, 5, 1, 1179681, 1610612741, 1, 1179682, 5, 3, 1179683, 33, 0, 1245192, 15, 65537, 1245193, 15, 65537, 1245194, 15, 65537, 1245195, 15, 65536, 1245196, 15, 65537, 1245197, 15, 65537, 1245198, 15, 65537, 1245199, 15, 65537, 1245200, 15, 65537, 1245201, 15, 65537, 1245202, 5, 0, 1245203, 5, 1, 1245206, 5, 1, 1245207, 5, 1, 1245208, 5, 1, 1245209, 1610612741, 1, 1245210, 1610612741, 1, 1245211, 1073741829, 3, 1245212, 536870927, 65537, 1245213, 536870927, 65537, 1245214, 536870927, 65537, 1245215, 5, 0, 1245216, 5, 1, 1245217, 1610612741, 1, 1245218, 5, 3, 1245219, 31, 0, 1310729, 15, 65537, 1310730, 15, 65537, 1310731, 15, 65537, 1310732, 15, 65537, 1310733, 15, 65537, 1310734, 15, 65537, 1310735, 15, 65537, 1310736, 15, 65537, 1310737, 15, 65537, 1310738, 5, 0, 1310739, 5, 1, 1310740, 15, 65537, 1310742, 5, 1, 1310743, 5, 1, 1310744, 5, 1, 1310745, 1610612741, 1, 1310746, 1610612741, 1, 1310747, 1073741829, 3, 1310748, 536870927, 65537, 1310749, 536870927, 65536, 1310750, 536870927, 65537, 1310751, 5, 0, 1310752, 5, 1, 1310753, 1610612741, 1, 1310754, 5, 3, 1310755, 31, 0, 1376256, 536870917, 1, 1376257, 536870917, 1, 1376258, 536870917, 1, 1376259, 536870917, 1, 1376260, 536870917, 1, 1376261, 536870917, 1, 1376262, 536870917, 1, 1376263, 536870917, 1, 1376264, 536870917, 0, 1376265, 15, 65537, 1376266, 15, 65537, 1376267, 15, 65537, 1376268, 15, 65537, 1376269, 15, 65537, 1376270, 15, 65536, 1376271, 15, 65537, 1376272, 15, 65537, 1376273, 15, 65537, 1376274, 5, 0, 1376275, 5, 1, 1376276, 5, 0, 1376277, 536870917, 0, 1376278, 5, 1, 1376279, 5, 1, 1376280, 5, 1, 1376281, 1610612741, 1, 1376282, 1610612741, 1, 1376283, 1073741829, 3, 1376284, 536870927, 65537, 1376285, 536870927, 65537, 1376286, 536870927, 65537, 1376287, 5, 0, 1376288, 5, 1, 1376289, 1610612741, 1, 1376290, 5, 3, 1376291, 31, 0 )

[node name="TileMap fons2" type="TileMap" parent="Mapa/TileMap fons"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 13
cell_custom_transform = Transform2D( 64, -0.017, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( 262155, 24, 0, 262156, 30, 0, 262157, 30, 0, 262158, 30, 0, 262159, 30, 0, 262160, 30, 0, 262161, 30, 0, 393220, 23, 0, 589841, 20, 0, 720923, 18, 0, 786437, 18, 0, 851996, 19, 0, 917524, 1073741829, 65537, 917525, 22, 0, 983047, 5, 3, 983058, 5, 0, 983059, 5, 1, 983060, 5, 1, 983061, 5, 1, 983065, 22, 0, 1048579, 19, 0, 1048582, 1073741829, 65537, 1048583, 1073741829, 3, 1048594, 5, 0, 1048595, 5, 1, 1048608, 1073741829, 65536, 1048609, 1610612741, 65536, 1114119, 1073741829, 1, 1114120, 22, 0, 1114121, 22, 0, 1114132, 21, 0, 1114133, 5, 1, 1114134, 5, 1, 1114143, 1073741829, 65536, 1114144, 1073741829, 65537, 1114145, 1610612741, 65537, 1114146, 1610612741, 65536, 1179656, 15, 65537, 1179657, 15, 1, 1179662, 15, 1, 1179663, 15, 1, 1179666, 5, 0, 1179667, 5, 1, 1179674, 1610612741, 1, 1179676, 536870927, 0, 1179677, 536870927, 0, 1179683, 32, 0, 1245192, 15, 65537, 1245214, 536870927, 65537, 1245215, 5, 0, 1245216, 5, 1, 1245217, 1610612741, 1, 1245218, 5, 3, 1310738, 15, 1, 1310739, 15, 1, 1310740, 15, 65537, 1310742, 15, 1, 1310743, 15, 1, 1310744, 15, 1, 1310745, 15, 1, 1310746, 15, 1, 1310747, 15, 1, 1310749, 536870927, 65536, 1310750, 536870927, 65537, 1310751, 5, 0, 1310752, 5, 1, 1310753, 1610612741, 1, 1310754, 5, 3, 1376256, 15, 1, 1376257, 15, 1, 1376258, 15, 1, 1376259, 15, 1, 1376260, 15, 1, 1376261, 15, 1, 1376262, 15, 1, 1376263, 15, 1, 1376264, 15, 1, 1376274, 15, 65537, 1376275, 15, 65537, 1376276, 15, 1, 1376277, 15, 1, 1376278, 15, 65537, 1376279, 15, 65537, 1376280, 15, 65537, 1376281, 15, 65537, 1376282, 15, 65537, 1376283, 15, 65537, 1376287, 15, 1, 1376288, 15, 1, 1376289, 15, 1, 1376290, 15, 1, 1441792, 31, 0, 1441793, 31, 0, 1441794, 31, 0, 1441795, 31, 0, 1441796, 31, 0, 1441797, 31, 0, 1441798, 31, 0, 1441799, 31, 0, 1441800, 31, 0, 1441801, 31, 0, 1441802, 31, 0, 1441803, 31, 0, 1441804, 31, 0, 1441805, 31, 0, 1441806, 31, 0, 1441807, 31, 0, 1441808, 31, 0, 1441809, 31, 0, 1441810, 31, 0, 1441811, 31, 0, 1441812, 31, 0, 1441813, 31, 0, 1441814, 31, 0, 1441815, 31, 0, 1441816, 31, 0, 1441817, 31, 0, 1441818, 31, 0, 1441819, 31, 0, 1441820, 31, 0, 1441821, 31, 0, 1441822, 31, 0, 1441823, 31, 0, 1441824, 31, 0, 1441825, 31, 0, 1441826, 31, 0, 1441827, 31, 0 )

[node name="TIlemap interactiu" type="TileMap" parent="Mapa"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 60, 0, 0, 50, 0, 0 )
format = 1
tile_data = PoolIntArray( -1, 31, 0, -65536, 31, 0, -65535, 31, 0, -65534, 31, 0, -65533, 31, 0, -65532, 31, 0, -65531, 31, 0, -65530, 31, 0, -65529, 31, 0, -65528, 31, 0, -65527, 31, 0, -65526, 31, 0, -65525, 31, 0, -65524, 31, 0, -65523, 31, 0, -65522, 31, 0, -65521, 31, 0, -65520, 31, 0, -65519, 31, 0, -65518, 31, 0, -65517, 31, 0, -65516, 31, 0, -65515, 31, 0, -65514, 31, 0, -65513, 31, 0, -65512, 31, 0, -65511, 31, 0, -65510, 31, 0, -65509, 31, 0, -65508, 31, 0, -65507, 31, 0, -65506, 31, 0, -65505, 31, 0, -65504, 31, 0, -65503, 31, 0, -65502, 31, 0, -65501, 31, 0, 65535, 31, 0, 35, 31, 0, 131071, 31, 0, 65571, 31, 0, 196607, 31, 0, 131099, 536870938, 0, 131100, 9, 0, 131107, 31, 0, 262143, 31, 0, 196627, 8, 0, 196628, 27, 0, 196629, 28, 0, 196630, 28, 0, 196631, 536870940, 0, 196632, 536870940, 0, 196633, 536870940, 0, 196634, 536870939, 0, 196635, 0, 0, 196636, 0, 1, 196637, 0, 6, 196638, 0, 7, 196643, 31, 0, 327679, 31, 0, 262154, 4, 0, 262155, 3, 0, 262156, 536870916, 0, 262161, 4, 0, 262162, 0, 1, 262163, 0, 6, 262164, 0, 7, 262179, 31, 0, 393215, 31, 0, 327715, 31, 0, 458751, 31, 0, 393222, 1610612741, 65539, 393223, 1073741829, 65539, 393251, 31, 0, 524287, 31, 0, 458754, 4, 0, 458755, 0, 1, 458756, 0, 2, 458757, 536870912, 4, 458758, 536870912, 4, 458759, 536870912, 4, 458760, 536870912, 2, 458761, 536870912, 1, 458762, 536870916, 0, 458787, 31, 0, 589823, 31, 0, 524292, 2, 0, 524293, 536870914, 1, 524294, 536870914, 1, 524295, 536870914, 1, 524296, 536870914, 0, 524323, 31, 0, 655359, 31, 0, 589828, 536870914, 65539, 589829, 536870937, 0, 589830, 536870937, 0, 589831, 536870937, 0, 589832, 2, 65539, 589839, 0, 0, 589840, 0, 1, 589841, 0, 2, 589842, 536870912, 4, 589843, 536870912, 4, 589844, 536870912, 4, 589845, 536870912, 4, 589846, 536870912, 4, 589847, 0, 5, 589848, 0, 6, 589849, 0, 7, 589859, 31, 0, 720895, 31, 0, 655377, 536870914, 65539, 655378, 536870937, 0, 655379, 536870937, 0, 655380, 536870937, 0, 655381, 536870937, 0, 655382, 536870937, 0, 655383, 536870914, 65536, 655395, 31, 0, 786431, 31, 0, 720897, 3, 0, 720931, 31, 0, 851967, 31, 0, 786440, 8, 0, 786441, 26, 0, 786457, 3, 0, 786458, 4, 4, 786459, 4, 5, 786460, 4, 6, 786461, 4, 7, 786467, 31, 0, 917494, 2, 0, 917503, 31, 0, 851971, 0, 0, 851972, 0, 1, 851973, 0, 2, 851974, 0, 3, 851975, 0, 5, 851976, 0, 6, 851977, 4, 7, 851978, 27, 0, 851979, 28, 0, 851980, 28, 0, 851981, 536870939, 0, 851982, 9, 0, 852003, 31, 0, 983039, 31, 0, 917509, 2, 65536, 917510, 25, 0, 917511, 2, 65539, 917517, 536870916, 7, 917518, 0, 1, 917519, 0, 2, 917520, 0, 3, 917521, 0, 3, 917522, 0, 5, 917523, 0, 6, 917524, 4, 7, 917530, 536870916, 7, 917531, 4, 1, 917532, 4, 6, 917533, 4, 7, 917539, 31, 0, 1048575, 31, 0, 983043, 35, 3, 983044, 35, 3, 983055, 2, 65536, 983056, 25, 0, 983057, 25, 0, 983058, 2, 65539, 983060, 536870916, 7, 983061, 3, 0, 983062, 4, 7, 983075, 31, 0, 1114111, 31, 0, 1048578, 36, 0, 1048579, 36, 2, 1048600, 4, 0, 1048601, 536870913, 0, 1048602, 536870916, 0, 1048608, 1610612741, 65539, 1048609, 1073741829, 65539, 1048611, 31, 0, 1114112, 0, 3, 1114113, 0, 3, 1114114, 0, 3, 1114115, 0, 3, 1114116, 0, 3, 1114117, 0, 3, 1114118, 0, 3, 1114119, 0, 4, 1114120, 0, 5, 1114121, 0, 6, 1114122, 4, 7, 1114137, 536870913, 65536, 1114143, 1610612741, 65539, 1114146, 1073741829, 65539, 1114147, 31, 0, 1179648, 2, 1, 1179649, 2, 1, 1179650, 2, 1, 1179651, 2, 1, 1179652, 2, 1, 1179653, 2, 1, 1179654, 2, 1, 1179655, 2, 2, 1179656, 2, 3, 1179666, 536870916, 7, 1179667, 0, 1, 1179668, 0, 2, 1179669, 0, 5, 1179670, 0, 6, 1179671, 4, 7, 1179673, 536870913, 131072, 1245184, 2, 1, 1245185, 2, 1, 1245186, 2, 1, 1245187, 2, 1, 1245188, 2, 1, 1245189, 2, 1, 1245190, 2, 1, 1245191, 2, 1, 1245192, 2, 3, 1245204, 2, 0, 1245205, 2, 3, 1310720, 2, 1, 1310721, 2, 1, 1310722, 2, 1, 1310723, 2, 1, 1310724, 2, 1, 1310725, 2, 1, 1310726, 2, 1, 1310727, 2, 1, 1310728, 2, 3, 1310740, 2, 0, 1310741, 2, 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="puntInici" type="Position2D" parent="."]
position = Vector2( 24, 520 )

[node name="moneda" parent="." groups=["Monedes"] instance=ExtResource( 3 )]
position = Vector2( 926, 322 )

[node name="moneda3" parent="." groups=["Monedes"] instance=ExtResource( 3 )]
position = Vector2( 769, 322 )

[node name="moneda2" parent="." groups=["Monedes"] instance=ExtResource( 3 )]
position = Vector2( 275, 39 )

[node name="goal" parent="." instance=ExtResource( 2 )]
position = Vector2( 1019, 42 )

[connection signal="recollida" from="moneda" to="." method="_on_moneda_recollida"]
[connection signal="recollida" from="moneda3" to="." method="_on_moneda_recollida"]
[connection signal="recollida" from="moneda2" to="." method="_on_moneda_recollida"]
[connection signal="objectiu_assolit" from="goal" to="." method="_on_goal_objectiu_assolit"]
